styling the buttons

--- a/styles/utility.css
+++ b/styles/utility.css
@@ -11,7 +11,7 @@
 }
 
 .px-lg {
-  padding-block: var(--px-lg);
+  padding-inline: var(--px-lg);
 }
 
 
@@ -26,6 +26,23 @@
   display: none;
 }
 
+.evemn-columns {
+  display: grid;
+  gap: 1rem;
+}
+
+.flex {
+  display: flex;
+}
+
+.gap-1 {
+  gap: 1rem;
+}
+
+.grid {
+  display: grid;
+}
+
 @media (width >= 80em) {
   .container {
     --max-width: 80rem;
@@ -33,6 +50,12 @@
 
   .desktop-only {
     display: initial;
+  }
+
+  .evemn-columns {
+    grid-auto-flow: column;
+    grid-auto-columns: 1fr;
+
   }
 }
 /* Se a width for maior que 80em: */
