--- a/styles/sections.css
+++ b/styles/sections.css
@@ -4,7 +4,24 @@
 }
 
 section {
+  & header {
+    & strong {
+      display: block;
+      font: var(--fw-md) var(--fs-sm)/100% var(--ff-sans);
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
 
+      color: var(--brand-color-primary);
+    }
+    h2 { 
+      margin-top: .5rem;
+    }
+  }
+
+  & p {
+    margin-top: .5rem;
+    color: var(--txt-color-secondary);
+  }
 }
 
 @media (width >= 80em) {
