--- a/styles/global.css
+++ b/styles/global.css
@@ -50,6 +50,8 @@ html {
   font-size: var(--fs-base);
   line-height: 1.6;
   color: var(--txt-color-primary);
+
+  overflow-x: hidden;
 }
 
 body {
